add css to board and app

--- a/app/src/components/board/board.css
+++ b/app/src/components/board/board.css
@@ -1,9 +1,9 @@
 .game-board {
+  background-color: green;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: repeat(3, 1fr);
-  grid-column-gap: 0px;
-  grid-row-gap: 0px;
+  grid-gap: 5px;
   height: fit-content;
   width: fit-content;
   margin: auto;
