--- a/app/src/components/square/square.css
+++ b/app/src/components/square/square.css
@@ -1,5 +1,9 @@
 .square {
+  background-color: #1f2028;
   height: 100px;
   width: 100px;
-  border: 2px solid black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 4em;
 }
